--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 DISCORD_TOKEN=<YOUR_DISCORD_BOT_TOKEN>
+DATABASE_URL=sqlite://<ABSOLUTE_PATH_TO_DB>
+DBMIGRATE_URL=sqlite://<ABSOLUTE_PATH_TO_DB>
+DBMIGRATE_PATH=./migrations
